src/components/Forms/Forms.css
.title {
  font-family: Georgia, Times, serif;
  font-size: 33px;
  line-height: 38px;
  font-weight: 700;
  color: #222222;
  margin: 0;
  text-transform: uppercase;
  text-align: center;
}

.subtitle {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 17px;
  line-height: 24px;
  font-weight: normal;
  text-align: center;
  margin-top: 15px;
  color: #565656;
}

.subtitlesmall {
  width: 65%;
  position: relative;
  padding: 0;
  margin: 15px auto 0 auto;
  }

.form {
  max-width: 580px;
  margin: 30px auto 30px;
  text-align: center;
  overflow: hidden;
}

.form.addresses {
  margin-top: 80px;
}

.form2 { margin: 60px auto 30px; }

.radiowrapper {
  display: block;
  float: left;
  text-align: left;
  margin-bottom: 20px;
  width: 50%;
  height: 100px;
}

.accountradio {
  box-sizing: border-box;
  padding: 0 50px;
  margin-bottom: 10px;
  width: 100%;
  height: auto;
  float: left;

  label {
    width: 100%;
    height: 90px;
  }
}

.accountsubtitle {
  text-align: left;
}

.phoneemailwrapper {
  display: block;
  position: relative;
}

.textwrapper {
  float: left;
  text-align: left;
  margin-top: 40px;
  margin-bottom: 15px;
  width: 100%;
}

.inputwrapper {
  text-align: left;
  margin: 15px 0 25px;
  strong.country {
    color: #565656;
  }
}

.inputwrapper.full {
  float: left;
  width: 100%;
}

.inputwrapper2 {
  text-align: left;
  margin: 30px auto 30px;
}

.inputwrapper3 {
  text-align: left;
  margin: 15px auto 30px;
}

.inputleft {
  width: 48%;
  float: left;
}

.inputright {
  width: 48%;
  float: right;
}

.inputmtneg15 {
  margin-top: -15px;
}

.buttonwrapper {
  float: left;
  text-align: center;
  margin: 35px 0 25px;
  width: 100%;
}

.paymessage {
  color: #565656;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 25px;
}

.buttonwrapper2 {
  text-align: center;
  margin: 50px 0 25px;
}

.buttonwrapper3 {
  float: none;
}

.label {
  font-family: Georgia, Times, serif;
  font-size: 12px;
  line-height: 12px;
  color: #000000;
  font-weight: 700;
  text-transform: uppercase;
  text-align: left;
  .required {
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
    text-decoration: none;
  }
}

.labelradio {
  display: block;
  float: left;
  color: #222222;
  font-size: 16px;
  line-height: 18px;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

.remember {
  position: absolute;
  margin: 0 auto;
  left: 1%;
  right: 1%;
  width: 100%;
  display: block;
  text-align: center;
  margin-top: -15px;
  margin-left: -10px;
}

.input {
  font-family: Georgia, Times, serif;
  background: #ffffff;
  border: 1px solid #cfcfcf;
  font-size: 12px;
  height: 42px;
  line-height: 42px;
  font-weight: 500;
  padding: 0 12px;
  color: #2D2D2D;
  display: block;
  max-width: 580px;
  width: 100%;
  margin: 10px auto;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  border-radius: 0;
}

.inputcheck {
  display: inline-block;
  outline: none;
  margin-right: 10px;
  position: relative;
  top: 2px;
}

.input:disabled {
  background: rgba(255, 255, 255, 0.5);
}

.textarea {
  font-family: Georgia, Times, serif;
  background: #ffffff;
  width: 100%;
  height: 44px;
  max-width: 580px;
  margin: 10px auto;
  box-sizing: border-box;
  color: red;
  border: 1px solid #cfcfcf;
  font-size: 12px;
  line-height: 42px;
  font-weight: 500;
  padding: 0 12px;
  color: #2D2D2D;
  resize: none;
}

.checkbox {
  font-family: Georgia, Times, serif;
  display: inline-block;
  width: auto;
  height: auto;
  position: relative;
  top: 2px;
  background: #ffffff;
  border: 1px solid #cfcfcf;
  font-size: 12px;
  line-height: 42px;
  font-weight: 500;
  padding: 0 12px;
  color: #2D2D2D;
  max-width: 580px;
  margin: 10px auto;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  border-radius: 0;
}

.radio {
  display: block;
  float: left;
  margin-right: 10px;
  outline: none;
}

.passworderror, .passwordhint {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: rgb(86, 86, 86);
  text-align: left;
}

.passworderror { font-size: 15px; }
.passwordhint { font-size: 12px; line-height: 15px; }

.submitregister {
  float: left;
  text-align: left;
  overflow: hidden;
  width: 100%;
  max-height: 300px;
  transition: max-height 0.2s linear;
  -webkit-transition: max-height 0.2s linear;
  -moz-transition: max-height 0.2s linear;
  -ms-transition: max-height 0.2s linear;
  -o-transition: max-height 0.2s linear;
}
.submitregister.disabled {
  max-height: 0;
  transition: max-height 0.2s linear;
  -webkit-transition: max-height 0.2s linear;
  -moz-transition: max-height 0.2s linear;
  -ms-transition: max-height 0.2s linear;
  -o-transition: max-height 0.2s linear;
}

.message {
  color: #565656;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 15px;
  line-height: 25px;
  margin-bottom: 25px;
}

.submitadd {
  cursor: pointer;
  background: transparent;
  border: none;
  border-bottom: 1px dotted #000000;
  color: #222222;
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 17px;
  line-height: 24px;
  font-weight: 700;
  outline: none;
}
/* ... */

